--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,13 @@
 page-login {
 
 }
+.fpbutton{
+    margin-top: 10px;
+}
+.joinButton{
+    text-align: center;
+}
+.logBack{
+    background-color:red;
+}
+
